# halo2

./: .gitignore  Cargo.toml  rust-toolchain
.github/workflows/: ci.yml  lints-stable.yml
arithmetic/curves/: Cargo.toml
arithmetic/curves/src/: arithmetic.rs
arithmetic/curves/src/bn256/: assembly.rs  curve.rs  fq.rs  fq2.rs  fq6.rs  fr.rs
arithmetic/curves/src/derive/: curve.rs  field.rs
arithmetic/curves/src/pasta/: mod.rs
arithmetic/curves/src/secp256k1/: fp.rs  fq.rs
arithmetic/curves/src/tests/: curve.rs  field.rs
arithmetic/ff/src/: lib.rs
arithmetic/group/: Cargo.toml
arithmetic/group/src/: prime.rs
arithmetic/pasta_curves/: Cargo.toml
arithmetic/pasta_curves/src/fields/: fp.rs  fq.rs
ff/src/: lib.rs
group/src/: lib.rs  wnaf.rs
halo2/: Cargo.toml
halo2_curves/: Cargo.toml
halo2_curves/src/bn256/: engine.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs
halo2_curves/src/derive/: curve.rs
halo2_gadgets/: Cargo.toml
halo2_gadgets/benches/: poseidon.rs  sha256.rs
halo2_gadgets/benches/sha256_assets/: sha256_proof
halo2_gadgets/src/: ecc.rs  lib.rs  sha256.rs  sinsemilla.rs  utilities.rs
halo2_gadgets/src/ecc/chip/: mul.rs
halo2_gadgets/src/ecc/chip/mul_fixed/: short.rs
halo2_gadgets/src/poseidon/: pow5.rs
halo2_gadgets/src/sha256/: table16.rs
halo2_gadgets/src/sha256/table16/: compression.rs  message_schedule.rs  spread_table.rs
halo2_gadgets/src/sha256/table16/compression/: compression_gates.rs  compression_util.rs  subregion_digest.rs  subregion_initial.rs  subregion_main.rs
halo2_gadgets/src/sha256/table16/message_schedule/: schedule_util.rs  subregion1.rs  subregion2.rs  subregion3.rs
halo2_gadgets/src/sinsemilla/: merkle.rs
halo2_gadgets/src/utilities/: cond_swap.rs  decompose_running_sum.rs  lookup_range_check.rs
halo2_proofs/: Cargo.toml
halo2_proofs/benches/: arithmetic.rs  bench_lookup.rs  commit_zk.rs  dev_lookup.rs  fft.rs  hashtocurve.rs  lookups.rs  plonk.rs
halo2_proofs/examples/: circuit-layout.rs  serialization.rs  shuffle.rs  shuffle_api.rs  simple-example.rs  two-chip.rs  vector-mul.rs
halo2_proofs/src/: arithmetic.rs  circuit.rs  dev.rs  fft.rs  helpers.rs  lib.rs  multicore.rs  plonk.rs  poly.rs  transcript.rs
halo2_proofs/src/circuit/: floor_planner.rs  layouter.rs  table_layouter.rs  value.rs
halo2_proofs/src/circuit/floor_planner/: blank.rs  single_pass.rs  v1.rs
halo2_proofs/src/dev/: cost.rs  failure.rs  gates.rs  graph.rs  metadata.rs  tfp.rs  util.rs
halo2_proofs/src/dev/graph/: layout.rs
halo2_proofs/src/fft/: recursive.rs
halo2_proofs/src/plonk/: assigned.rs  circuit.rs  error.rs  evaluation.rs  keygen.rs  lookup.rs  mv_lookup.rs  permutation.rs  prover.rs  shuffle.rs  verifier.rs
halo2_proofs/src/plonk/circuit/: compress_selectors.rs
halo2_proofs/src/plonk/lookup/: prover.rs  verifier.rs
halo2_proofs/src/plonk/mv_lookup/: prover.rs  verifier.rs
halo2_proofs/src/plonk/permutation/: keygen.rs  prover.rs  verifier.rs
halo2_proofs/src/plonk/vanishing/: prover.rs  verifier.rs
halo2_proofs/src/plonk/verifier/: batch.rs
halo2_proofs/src/poly/: commitment.rs  domain.rs  multiopen.rs  multiopen_test.rs  query.rs
halo2_proofs/src/poly/ipa/: commitment.rs
halo2_proofs/src/poly/ipa/multiopen/: prover.rs
halo2_proofs/src/poly/kzg/: commitment.rs  msm.rs  strategy.rs
halo2_proofs/src/poly/kzg/multiopen/: shplonk.rs
halo2_proofs/src/poly/kzg/multiopen/gwc/: prover.rs  verifier.rs
halo2_proofs/src/poly/kzg/multiopen/shplonk/: prover.rs  verifier.rs
halo2_proofs/src/transcript/: blake2b.rs  poseidon.rs
halo2_proofs/tests/: plonk_api.rs
primitives/poseidon/: Cargo.toml
primitives/poseidon/src/: grain.rs  matrix.rs  permutation.rs  poseidon.rs  spec.rs
src/: arithmetic.rs  lib.rs
src/bn256/: curve.rs  fq.rs  fq12.rs  fq2.rs  fr.rs
src/derive/: curve.rs  field.rs
src/secp256k1/: curve.rs  fp.rs  fq.rs
