[workspace]
members = [
    "halo2",
    "halo2_proofs",
    "arithmetic/ff",
    "arithmetic/group",
    "arithmetic/curves",
    "arithmetic/pasta_curves",
    "primitives/poseidon"
]

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
