[workspace]
members = [
    "halo2",
    "halo2_proofs",
    "arithmetic/curves",
    "primitives/poseidon"
]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
panic = "abort"
codegen-units = 1
